--- a/services.html
+++ b/services.html
@@ -65,9 +65,9 @@
 
     <div class="container-fluid">
 
-      <h2 class="section-heading">Services We Offer</h2>
+      <h2 class="section-heading reveal">Services We Offer</h2>
 
-      <div class="spacer-services mb-5">
+      <div class="spacer-services mb-5 reveal">
         <div class="line"></div>
         <i class="fa fa-solid fa-square"></i>
         <div class="line"></div>
@@ -77,81 +77,57 @@
 
         <div class="row mb-5">
 
-          <div class="px-3 col-lg-12">
+          <div class="px-3 col-lg-12 reveal">
             <div class="card">
-              <!-- <div class="logo-container">
-                <i class="fa fa-solid fa-brain fa-2x icon"></i>
-              </div> -->
               <h4 class="feature-title">Custom Web Portal Development</h4>
               <p>Our team has extensive experience in custom software development using Microsoft techonologies and python. We have designed, developed and maintained multiple business critical applications in area like traveling, marketing education and services sectors.</p>
             </div>
           </div>
 
-          <div class="px-3 col-lg-12">
+          <div class="px-3 col-lg-12 reveal">
             <div class="card">
-              <!-- <div class="logo-container">
-                <i class="fa fa-solid fa-building fa-2x icon"></i>
-              </div> -->
               <h4 class="feature-title">Startup Development</h4>
               <p>We facilitate startups to bring their ideas to reality by using descriptive technologies and provide consultancy. We build Prototypes and proof of concepts to get findings, create MVP to validate the idea and develop a complete end to end system.</p>
             </div>
           </div>
 
-          <div class="px-3 col-lg-12">
+          <div class="px-3 col-lg-12 reveal">
             <div class="card">
-              <!-- <div class="logo-container">
-                <i class="fa fa-solid fa-chart-pie fa-2x icon"></i>
-              </div> -->
               <h4 class="feature-title">Business Intelligence</h4>
               <p>We collect and use data across systems and turn them into information and opportunity. A customized dashboard and reports provide actionable insights to make better and faster decisions. These insight help in improving existing processes and create new strategies.</p>
             </div>
           </div>
 
-          <div class="px-3 col-lg-12">
+          <div class="px-3 col-lg-12 reveal">
             <div class="card">
-              <!-- <div class="logo-container">
-                <i class="fa fa-solid fa-brain fa-2x icon"></i>
-              </div> -->
               <h4 class="feature-title">Data Science & AI</h4>
               <p>Our data science team provides intelligent solutions by leveraging the use of AI and machine learning. We have hands on experience with artificial intelligence. Natural language processing, Neural network, deep learning, computer vision and speech recognition.</p>
             </div>
           </div>
 
-          <div class="px-3 col-lg-12">
+          <div class="px-3 col-lg-12 reveal">
             <div class="card">
-              <!-- <div class="logo-container">
-                <i class="fa fa-brands fa-android fa-2x icon"></i>
-              </div> -->
               <h4 class="feature-title">Mobile Apps Development</h4>
               <p>We develop mobile apps for Android & IOS (native and hybrid) with a special focus on performance and user experience. Our team unsures that the app should be able to meet evolving business needs along with meeting the core business requirements at present.</p>
             </div>
           </div>
 
-          <div class="px-3 col-lg-12">
+          <div class="px-3 col-lg-12 reveal">
             <div class="card">
-              <!-- <div class="logo-container">
-                <i class="fa fa-brands fa-wordpress fa-2x icon"></i>
-              </div> -->
                 <h4 class="feature-title">Web Development</h4>
               <p>Stunning websites that look good on all devices & provide robust functionality to make your brand stand out</p>
             </div>
           </div>
 
-          <div class="px-3 col-lg-12">
+          <div class="px-3 col-lg-12 reveal">
             <div class="card">
-              <!-- <div class="logo-container">
-                <i class="fa fa-brands fa-android fa-2x icon"></i>
-              </div> -->
               <h4 class="feature-title">SEO Optimization</h4>
               <p>White hat SEO techniques that improve your website's ranking, performance and stand the test of Google.</p>
             </div>
           </div>
 
-          <div class="px-3 col-lg-12">
+          <div class="px-3 col-lg-12 reveal">
             <div class="card">
-              <!-- <div class="logo-container">
-                <i class="fa fa-solid fa-brain fa-2x icon"></i>
-              </div> -->
               <h4 class="feature-title">General Features</h4>
               <p>We helps companies to tap new opportunities and improve existing processes by using emerging techonologies and data driven strategy. Be careful evaluation of ever-evolving customer needs, we help to create a creative, simpler and user-centric solutions.</p>
             </div>
@@ -166,25 +142,86 @@
   </section>
 
 
-  <!-- Footer -->
+   <!-- Footer -->
 
-  <footer class="white-section" id="footer">
-    <div class="container-fluid">
+   <footer class="d-flex justify-content-between align-items-center py-3 px-5 border-top">
 
-      <i class="social-icon fab fa-facebook-f"></i>
-      <i class="social-icon fab fa-twitter"></i>
-      <i class="social-icon fab fa-instagram"></i>
-      <i class="social-icon fas fa-envelope"></i>
-      <p>© Copyright Techoniche</p>
+    <div class="d-flex align-items-center">
+      <a href="/" class="">
+        <img src="./images/logo-footer.ico" alt="PP">
+      </a>
+      <span class="">© 2022 Techoniche</span>
+    </div>
 
+    <div class="footer-list">
+
+      <div class="footer-group footer-group-one">
+        <div class="footer-item">
+          <a class="mail-icon" href="#contact"><i class="social-icon fas fa-envelope"></i></a>
+          <p>contact@techoniche.com</p>
+        </div>
+        <div class="footer-item">
+          <a class="instagram-icon" href="https://www.instagram.com/techoniche/"><i class="social-icon fab fa-instagram"></i></a>
+          <p>Instagram</p>
+        </div>
+      </div>
+
+      <div class="footer-group">
+        <div class="footer-item mt-3">
+          <a class="phone-icon" href="#contact"><i class="fa fa-regular fa-phone"></i></a>
+          <p>+1 (412) 370-9778</p>
+        </div>
+        <div class="footer-item mt-3">
+          <a class="location-icon" href="https://www.instagram.com/techoniche/"><i class="fa fa-regular fa-location-arrow"></i></a>
+          <p>Cottage Grove, MN</p>
+        </div>
+      </div>
+
+      
     </div>
 
   </footer>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./js/particles.js"></script>
-  <script src="./js/app.js"></script>
+  <!-- <script src="./js/app.js"></script> -->
+  <script>
+
+    // Fade-in on page load 
+    window.addEventListener("load" , () => {
+      // var heading = document.querySelector('.big-heading')
+      // heading.classList.add('active')
+      var reveals = document.querySelectorAll('.reveal')
+      reveals.forEach((revealItem) => {
+        if (revealItem.getBoundingClientRect().top < window.innerHeight) {
+          revealItem.classList.add("active")
+        }
+      })
+    })
+
+
+    // Fade animation on Scroll
+    window.addEventListener("scroll", () => {
+
+      var reveals = document.querySelectorAll(".reveal")
+
+      reveals.forEach((revealItem) => {
+
+        var windowHeight = window.innerHeight
+        var revealItemTop = revealItem.getBoundingClientRect().top
+        var revealPoint = 80
+
+        if ((revealItemTop) < (windowHeight - revealPoint)) {
+          revealItem.classList.add("active")
+        } 
+        // else {
+        //   revealItem.classList.remove("active")
+        // }
+
+      })
+    })
+
+  </script>
 
 
 </body>
