update brand logo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark">
 
-      <a class="navbar-brand" href="./">techoniche</a>
+      <a class="navbar-brand" href="./">
+        <img class="nav-logo" src="./images/TECHNONICHE png.png" alt="techoniche-logo">
+      </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -435,10 +437,10 @@
   <footer class="d-flex justify-content-between align-items-center py-3 px-5 border-top">
 
     <div class="d-flex align-items-center">
-      <a href="/" class="">
-        <img src="./images/logo-footer.ico" alt="PP">
+      <a href="./" class="">
+        <img class="footer-logo" src="./images/TECHNONICHE png.png" alt="techoniche-logo">
       </a>
-      <span class="">© 2022 Techoniche</span>
+      <!-- <span class="">© 2022 Techoniche</span> -->
     </div>
 
     <div class="footer-list">
@@ -460,7 +462,7 @@
           <p>+1 (412) 370-9778</p>
         </div>
         <div class="footer-item mt-3">
-          <a class="location-icon" href="https://www.instagram.com/techoniche/"><i class="fa fa-regular fa-location-arrow"></i></a>
+          <a class="location-icon" href="#contact"><i class="fa fa-regular fa-location-arrow"></i></a>
           <p>Cottage Grove, MN</p>
         </div>
       </div>
