--- a/services.html
+++ b/services.html
@@ -32,7 +32,9 @@
     <div class="container-nav">
       <nav class="navbar navbar-expand-lg navbar-dark">
 
-        <a class="navbar-brand" href="./">techoniche</a>
+        <a class="navbar-brand" href="./">
+          <img class="nav-logo" src="./images/TECHNONICHE png.png" alt="techoniche-logo">
+        </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -147,10 +149,10 @@
    <footer class="d-flex justify-content-between align-items-center py-3 px-5 border-top">
 
     <div class="d-flex align-items-center">
-      <a href="/" class="">
-        <img src="./images/logo-footer.ico" alt="PP">
+      <a href="./" class="">
+        <img class="footer-logo" src="./images/TECHNONICHE png.png" alt="techoniche-logo">
       </a>
-      <span class="">© 2022 Techoniche</span>
+      <!-- <span class="">© 2022 Techoniche</span> -->
     </div>
 
     <div class="footer-list">
