--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Nav Bar -->
 
-  <div class="colored-section container-nav">
+  <div class="container-nav">
 
     <nav class="navbar navbar-expand-lg navbar-dark">
 
@@ -224,11 +224,11 @@
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">Techoniche is the best! Not only do they build the best websites, but also work hard to make the necessary changes to keep our website relevant.</h2>
-          <em>Will Smith, New York</em>
+          <em>David Hanson, Saint Paul</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="testimonial-text">If you want to build a cloud-based platform, but your business has limited funds, I recommend Techoniche.</h2>
-          <em>Jane, Illinois</em>
+          <h2 class="testimonial-text">Techoniche helped our small business to grow and were very accomodative to our business needs.</h2>
+          <em>Erika Jones, Woodbury</em>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -290,8 +290,8 @@
           <div class="row mb-3">
             <div class="col-12">
               <div class="input-group">
-                <span class="input-label">Full Name *</span>
-                <input class="input" name="name" type="text" placeholder="Enter Your Name" required >
+                <span class="input-label">Full Name</span>
+                <input class="input" name="name" type="text" placeholder="Enter Your Name">
               </div>
             </div>
           </div>
@@ -299,8 +299,8 @@
           <div class="row mb-3">
             <div class="col-md-6 email-input">
               <div class="input-group">
-                <span class="input-label">Email *</span>
-                <input class="input" name="email" type="email" placeholder="Enter Your Email" required >
+                <span class="input-label">Email</span>
+                <input class="input" name="email" type="email" placeholder="Enter Your Email">
               </div>
             </div>
             <div class="col-md-6">
@@ -314,7 +314,7 @@
           <div class="row mb-3">
             <div class="col-12">
               <div class="input-group">
-                <span class="input-label">Needed Services *</span>
+                <span class="input-label">Needed Services</span>
                 <select class="form-select form-select-sm" name="subject" aria-label=".form-select-sm example">
                   <option selected>Please Choose</option>
                   <option value="Standard Website Design & Development">Standard Website Design & Development</option>
@@ -440,7 +440,6 @@
       <a href="./" class="">
         <img class="footer-logo" src="./images/TECHNONICHE png.png" alt="techoniche-logo">
       </a>
-      <!-- <span class="">© 2022 Techoniche</span> -->
     </div>
 
     <div class="footer-list">
