--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
 
     <!-- Nav Bar -->
 
-  <section class="colored-section" id="title">
+  <section id="title">
     <div class="container-nav">
       <nav class="navbar navbar-expand-lg navbar-dark">
 
