--- a/index.html
+++ b/index.html
@@ -3,8 +3,32 @@
  
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Techoniche - a software agency.">
+  <meta name="keywords" content="software, software-agency, web-development, software-house">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- FB & Whatsapp -->
+
+  <!-- Site Name, Title, and Description to be displayed -->
+  <meta property="og:site_name" content="Techoniche">
+  <meta property="og:title" content="Techoniche">
+  <meta property="og:description" content="A Software Agency">
+
+  <!-- Image to display -->
+  <meta property="og:image" content="https://aliarif1.github.io/techoniche/images/thumbnail.png">
+  <meta property="og:type" content="website" />
+  <meta property="og:image:type" content="image/jpeg">
+
+  <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
+  <meta property="og:image:width" content="300">
+  <meta property="og:image:height" content="65">
+
+  <!-- Website to visit when clicked in fb or WhatsApp-->
+  <meta property="og:url" content="https://aliarif1.github.io/techoniche/">
+
+
   <title>Techoniche</title>
+
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="./images/favicon.ico">
