--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   <meta property="og:description" content="A Software Agency">
 
   <!-- Image to display -->
-  <meta property="og:image" content="https://aliarif1.github.io/techoniche/images/thumbnail.png">
+  <meta property="og:image" itemprop="image" content="https://aliarif1.github.io/techoniche/images/thumbnail.png">
   <meta property="og:type" content="website" />
-  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:type" content="image/png">
+
+  <link itemprop="thumbnailUrl" href="https://aliarif1.github.io/techoniche/images/thumbnail.png"> 
 
   <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
   <meta property="og:image:width" content="300">
@@ -51,6 +53,11 @@
 </head>
 
 <body>
+
+
+  <span itemprop="image" itemscope itemtype="image/png"> 
+    <link itemprop="url" href="https://aliarif1.github.io/techoniche/images/thumbnail.png"> 
+  </span>
 
 
   <!-- Nav Bar -->
