update meta tags

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <!-- Image to display -->
   <meta property="og:image" itemprop="image" content="https://aliarif1.github.io/techoniche/images/thumbnail.png">
   <meta property="og:type" content="website" />
-  <meta property="og:image:type" content="image/png">
-
+  <!-- <meta property="og:image:type" content="image/png"> -->
+  <meta property="og:image" content="https://aliarif1.github.io/techoniche/images/thumbnail.png">
   <link itemprop="thumbnailUrl" href="https://aliarif1.github.io/techoniche/images/thumbnail.png"> 
 
   <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
@@ -55,7 +55,11 @@
 <body>
 
 
-  <span itemprop="image" itemscope itemtype="image/png"> 
+  <!-- <span itemprop="image" itemscope itemtype="image/png"> 
+    <link itemprop="url" href="https://aliarif1.github.io/techoniche/images/thumbnail.png"> 
+  </span> -->
+
+  <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> 
     <link itemprop="url" href="https://aliarif1.github.io/techoniche/images/thumbnail.png"> 
   </span>
 
