add email.js functionality

--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
   <!-- Local Stylesheet -->
   <link rel="stylesheet" href="css/styles.css">
 
+  <!-- Email.js -->
+  <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+    (function(){
+        emailjs.init("fb2qd2PMkBROkyd7v");
+    })();
+  </script>
+
 
 </head>
 
@@ -509,7 +519,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./js/particles.js"></script>
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
   <script src="./js/app.js"></script>
 
 
