update nav faq link

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta name="description" content="Techoniche - a software agency.">
   <meta name="keywords" content="software, software-agency, web-development, software-house">
+  <meta name="author" content="Ali Arif">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- FB & Whatsapp -->
+  <!-- FB & Whatsapp link preview -->
 
   <!-- Site Name, Title, and Description to be displayed -->
   <meta property="og:site_name" content="Techoniche">
@@ -15,18 +16,18 @@
   <meta property="og:description" content="A Software Agency">
 
   <!-- Image to display -->
-  <meta property="og:image" itemprop="image" content="https://aliarif1.github.io/techoniche/images/thumbnail.png">
+  <meta property="og:image" itemprop="image" content="www.techoniche.com/images/thumbnail.png">
   <meta property="og:type" content="website" />
   <!-- <meta property="og:image:type" content="image/png"> -->
-  <meta property="og:image" content="https://aliarif1.github.io/techoniche/images/thumbnail.png">
-  <link itemprop="thumbnailUrl" href="https://aliarif1.github.io/techoniche/images/thumbnail.png"> 
+  <meta property="og:image" content="www.techoniche.com/images/thumbnail.png">
+  <link itemprop="thumbnailUrl" href="www.techoniche.com/images/thumbnail.png"> 
 
   <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="65">
 
   <!-- Website to visit when clicked in fb or WhatsApp-->
-  <meta property="og:url" content="https://aliarif1.github.io/techoniche/">
+  <meta property="og:url" content="www.techoniche.com/">
 
 
   <title>Techoniche</title>
@@ -50,9 +51,7 @@
   <link rel="stylesheet" href="css/styles.css">
 
   <!-- Email.js -->
-  <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-  </script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="text/javascript">
     (function(){
         emailjs.init("fb2qd2PMkBROkyd7v");
@@ -65,12 +64,8 @@
 <body>
 
 
-  <!-- <span itemprop="image" itemscope itemtype="image/png"> 
-    <link itemprop="url" href="https://aliarif1.github.io/techoniche/images/thumbnail.png"> 
-  </span> -->
-
   <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> 
-    <link itemprop="url" href="https://aliarif1.github.io/techoniche/images/thumbnail.png"> 
+    <link itemprop="url" href="www.techoniche.com/images/thumbnail.png"> 
   </span>
 
 
@@ -99,6 +94,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#faqs">FAQs</a>
           </li>
         </ul>
 
@@ -398,7 +396,7 @@
 
   <!-- FAQs -->
 
-  <section class="faq">
+  <section id="faqs" class="faq">
 
     <div class="container-fluid reveal">
       <div class="section-heading">Frequently Asked Questions</div>
@@ -496,7 +494,7 @@
         </div>
         <div class="footer-item">
           <a class="instagram-icon" href="https://www.instagram.com/techoniche/"><i class="social-icon fab fa-instagram"></i></a>
-          <p>Instagram</p>
+          <a href="https://www.instagram.com/techoniche/"><p>Instagram</p></a>
         </div>
       </div>
 
