--- a/services.html
+++ b/services.html
@@ -52,6 +52,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./index.html#contact">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html#faqs">FAQs</a>
+            </li>
           </ul>
 
         </div>
@@ -131,7 +134,7 @@
           <div class="px-3 col-lg-12 reveal">
             <div class="card">
               <h4 class="feature-title">General Features</h4>
-              <p>We helps companies to tap new opportunities and improve existing processes by using emerging techonologies and data driven strategy. Be careful evaluation of ever-evolving customer needs, we help to create a creative, simpler and user-centric solutions.</p>
+              <p>We helps companies to tap new opportunities and improve existing processes by using emerging techonologies and data driven strategy. By careful evaluation of ever-evolving customer needs, we help to create a creative, simpler and user-centric solutions.</p>
             </div>
           </div>
           
@@ -164,7 +167,7 @@
         </div>
         <div class="footer-item">
           <a class="instagram-icon" href="https://www.instagram.com/techoniche/"><i class="social-icon fab fa-instagram"></i></a>
-          <p>Instagram</p>
+          <a href="https://www.instagram.com/techoniche/"><p>Instagram</p></a>
         </div>
       </div>
 
@@ -186,7 +189,6 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="./js/app.js"></script> -->
   <script>
 
     // Fade-in on page load 
