--- a/services.html
+++ b/services.html
@@ -44,16 +44,28 @@
 
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link services-link" href="#services">Services</a>
+              <a class="nav-link services-link" href="#services">
+                <i class="fa fa-solid fa-chevron-right"></i>
+                Services
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./index.html#aboutUs">About Us</a>
+              <a class="nav-link" href="./index.html#aboutUs">
+                <i class="fa fa-solid fa-chevron-right"></i>
+                About Us
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./index.html#contact">Contact</a>
+              <a class="nav-link" href="./index.html#contact">
+                <i class="fa fa-solid fa-chevron-right"></i>
+                Contact
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./index.html#faqs">FAQs</a>
+              <a class="nav-link" href="./index.html#faqs">
+                <i class="fa fa-solid fa-chevron-right"></i>
+                FAQs
+              </a>
             </li>
           </ul>
 
