--- a/index.html
+++ b/index.html
@@ -87,16 +87,28 @@
 
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#services">Services</a>
+            <a class="nav-link" href="#services">
+              <i class="fa fa-solid fa-chevron-right"></i>
+              Services
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#aboutUs">About Us</a>
+            <a class="nav-link" href="#aboutUs">
+              <i class="fa fa-solid fa-chevron-right"></i>
+              About Us
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="#contact">
+              <i class="fa fa-solid fa-chevron-right"></i>
+              Contact
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#faqs">FAQs</a>
+            <a class="nav-link" href="#faqs">
+              <i class="fa fa-solid fa-chevron-right"></i>
+              FAQs
+            </a>
           </li>
         </ul>
 
