update portfolio section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#testimonials">
+              <i class="fa fa-solid fa-chevron-right"></i>
+              Our Work
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#contact">
               <i class="fa fa-solid fa-chevron-right"></i>
               Contact
@@ -271,17 +277,75 @@
   </section>
 
 
-  <!-- Testimonials -->
+  <!-- Clients & Testimonials -->
 
-  <section class="grey-section" id="testimonials">
+  <section id="testimonials" class="grey-section">
+
+    <div class="clients">
+  
+      <h2 class="section-heading reveal">Our Work</h2>
+
+      <div class="spacer-services mb-5 reveal">
+        <div class="line-testimonials"></div>
+        <i class="fa fa-solid fa-square"></i>
+        <div class="line-testimonials"></div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          
+          <div class="px-3 col-md-4 reveal">
+            <div class="img-card">
+              <img class="img-card__img" src="./images/topAcademy.jpeg" alt="">
+              <div class="img-card__overlay"></div>
+              <ul class="img-card__text">
+                <li>Web development and Digital marketing</li>
+                <li>Development of LMS website</li>
+                <li>Social media management</li>
+                <li>Collaboration for teaching online courses</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="px-3 col-md-4 reveal">
+            <div class="img-card">
+              <img class="img-card__img" src="./images/villageBed.jpeg" alt="">
+              <div class="img-card__overlay"></div>
+              <ul class="img-card__text">
+                <li>Completed their website</li>
+                <li>Social media management (Instagram,Facebook,Pintrest)</li>
+                <li>Advertisement of products</li>
+                <li>Facebook marketplace, enlisting on shopify</li>
+                <li><a href="https://village-beds.co.uk/">https://village-beds.co.uk/</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="px-3 col-md-4 reveal">
+            <div class="img-card">
+              <img class="img-card__img" src="./images/elite1.jpg" alt="">
+              <div class="img-card__overlay"></div>
+              <ul class="img-card__text">
+                <li>SEO Optimization</li>
+                <li>Social media management (Instagram,Facebook,Pintrest)</li>
+                <li>Social media marketing</li>
+              </ul>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  
 
     <div id="carouselExampleControls" class="carousel slide" data-interval="true" data-bs-ride="true">
       <div class="carousel-inner">
-        <div class="carousel-item active container-fluid">
+        <div class="carousel-item active">
           <h2 class="testimonial-text">Techoniche is the best! Not only do they build the best websites, but also work hard to make the necessary changes to keep our website relevant.</h2>
           <em>David Hanson, Saint Paul</em>
         </div>
-        <div class="carousel-item container-fluid">
+        <div class="carousel-item">
           <h2 class="testimonial-text">Techoniche helped our small business to grow and were very accomodative to our business needs.</h2>
           <em>Erika Jones, Woodbury</em>
         </div>
