--- a/services.html
+++ b/services.html
@@ -26,54 +26,58 @@
 <body>
 
 
-    <!-- Nav Bar -->
+  <!-- Nav Bar -->
 
-  <section id="title">
-    <div class="container-nav">
-      <nav class="navbar navbar-expand-lg navbar-dark">
+  <div class="container-nav">
+    <nav class="navbar navbar-expand-lg navbar-dark">
 
-        <a class="navbar-brand" href="./">
-          <img class="nav-logo" src="./images/TECHNONICHE png.png" alt="techoniche-logo">
-        </a>
+      <a class="navbar-brand" href="./">
+        <img class="nav-logo" src="./images/TECHNONICHE png.png" alt="techoniche-logo">
+      </a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link services-link" href="#services">
-                <i class="fa fa-solid fa-chevron-right"></i>
-                Services
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html#aboutUs">
-                <i class="fa fa-solid fa-chevron-right"></i>
-                About Us
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html#contact">
-                <i class="fa fa-solid fa-chevron-right"></i>
-                Contact
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html#faqs">
-                <i class="fa fa-solid fa-chevron-right"></i>
-                FAQs
-              </a>
-            </li>
-          </ul>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link services-link" href="#services">
+              <i class="fa fa-solid fa-chevron-right"></i>
+              Services
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html#aboutUs">
+              <i class="fa fa-solid fa-chevron-right"></i>
+              About Us
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html#testimonials">
+              <i class="fa fa-solid fa-chevron-right"></i>
+              Our Work
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html#contact">
+              <i class="fa fa-solid fa-chevron-right"></i>
+              Contact
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html#faqs">
+              <i class="fa fa-solid fa-chevron-right"></i>
+              FAQs
+            </a>
+          </li>
+        </ul>
 
-        </div>
+      </div>
 
-      </nav>
-    </div>
-  </section>
+    </nav>
+  </div>
 
 
   <!-- Services -->
